--- a/php/style.css
+++ b/php/style.css
@@ -1,38 +1,37 @@
 body {
-	font-family: Georgia, serif;
+	font-family: Raleway;
 	height: 100%;
-	margin: 0;
 	text-align: center;
 	width: 100%;
-	background-color: #ffffff;
+	background-color: white;
 }
 
 h1 {
 	font-size: 50px;
+	font-family: Raleway;
 	height: 100%;
 	margin: 0;
-	text-align: center;
+	color: white;
 	width: 100%;
 }
 
-h2 {
-	color: #fff000;
-	font-size: 56px; 
-}
-
-form{
- 	color: #000000;
- 	font-size: 10px;
- 	height: 100%;
-	margin: 0 auto;
-	text-align: center;
-	width: 100%;
+h2 
+{
+	margin-left: 20px; 
+	font-family: Raleway;
 }
 
 
 p {
-	color: #ffffff;
 	font-size: 12px;
+	font-family: Raleway;
+	color: white;
+}
+
+label {
+	font-size: 12px;
+	font-family: Raleway;
+	color: white;
 }
 
 #custom-handle {
@@ -42,10 +41,88 @@ p {
     margin-top: -.8em;
     text-align: center;
     line-height: 1.6em;
+    font-family: Raleway;
   }
 #slider{
 	width: 20%;
 	margin: 0 auto;
+	font-family: Raleway;
 }
 
+#header 
+{ 
+	font: bold 24px;
+	font-family: Raleway;
+	font-style: italic;
+	text-align: center;
+	padding: 20px;
+	border-bottom: 3px solid black;
+	background-color: GreenYellow;
+	margin-bottom: 0px; 
+}
+#contents 
+{ 
+	float: right;
+	font-family: Raleway;
+	color: white;
+	text-align: center;
+	padding: 20px 35px 380px 0px;
+	width: 70%;
+	height: 100%;
+	border: none;
+	background-color:  royalblue;
+ 
+}
+
+#contents_qrpage
+{
+	float: right;
+	font-family: Raleway;
+	color: white;
+	text-align: center;
+	margin-top: 0px;
+	padding: 40px 35px 100px 0px;
+	width: 70%;
+	height: 100%;
+	border: none;
+	background-color:  royalblue;
+}
+#nav 
+{ 
+	float: left;
+	font-family: Raleway;
+	width: 23%;
+	height: 600px;
+	margin-top: 10px;
+	font-weig ht: bold;
+	padding:20px;
+	border: none;
+	background-color: white; 
+	transition: 10s;
+	text-align: left; 
+}
+#nav a 
+{ 
+	text-decoration: none;
+	font-family: Raleway;
+	color: royalblue;
+
+}
+#nav a:hover 
+{ 
+	font-family: Raleway;
+	color: Red;
+}
+
+
+.fadeImage {
+    -webkit-animation: fadein 4s; /* Safari, Chrome and Opera > 12.1 */
+    display: block;
+    margin: 25px auto;
+}
+
+@-webkit-keyframes fadein {
+    from { opacity: 1; }
+    to   { opacity: 0; }
+}
 
