Added new changes for sprint3

--- a/Mobile_Module/src/pages/events/event.scss
+++ b/Mobile_Module/src/pages/events/event.scss
@@ -1,6 +1,14 @@
 EventPage{
+  .Events {
+    background-color: #b4d7ff;
+  }
 
+.color{
+  background-color: #666362;
+}
 .send{
   border-radius: 30px;
 }
+
+
 }
