--- a/Mobile_Module/src/pages/forgot_password/frg_pass.scss
+++ b/Mobile_Module/src/pages/forgot_password/frg_pass.scss
@@ -1,5 +1,13 @@
 page-forgot-password{
 
+  .forgot_password{
+    background-color: #b4d7ff;
+  }
+
+  .color{
+    background-color: #666362;
+  }
+
 .send{
   border-radius: 30px;
 }
