--- a/Mobile_Module/src/pages/scan/scan.scss
+++ b/Mobile_Module/src/pages/scan/scan.scss
@@ -1,11 +1,14 @@
 page-scan {
-  // .Scan{
-  //   background: #1b1b1b;
-  //   color: #c7932b;
-  // }
+  .Scan {
+    background-color: #b4d7ff;
+
+  }
+  .color{
+    background-color:#666362;
+  }
 
   .Scan-button {
     color: #ffffff;
-    background-color:#c7932b;
+    background-color:#1E90FF;
   }
 }
