--- a/Mobile_Module/src/pages/login/login.scss
+++ b/Mobile_Module/src/pages/login/login.scss
@@ -18,7 +18,7 @@ page-login {
 
   ion-card.card {
     box-shadow: none;
-    background-color:#3B5998;
+    background-color:#3b5998;
     border-radius: 5px;
   }
 
